# leg_odometry

./: .gitignore  CMakeLists.txt  README.md  package.xml  project_leg_odometry.md  setup.cfg  setup.py
config/: ekf_params.yaml
doc/: leg_odometry_proposal.md
hybrid_cpp/: leg_odom_node.cpp
hybrid_cpp/update/: UpdaterZUPT.h
launch/: leg_odometry.launch.py  verify_mapping.launch.py
leg_odometry/: contact_detector.py  ekf.py  kinematics.py
scripts/: generate_sim_data.py  leg_odometry_node.py
